# field_robotics_assignment

./: README.md  package.xml  setup.cfg  setup.py
field_robotics_assignment/: controller_node.py  frontier_explorer.py
launch/: exploration.launch.py  task1.launch.py
resource/: Config_assignment.rviz  mapper_params_online_async.yaml  nav2_params.yaml
resource/gazebo_world/exploration_world2/: model.config  model.sdf  worls_model2.sdf
resource/map/: map.pgm  map.yaml
